--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 
 <html lang="en">
 <head>
-  <title>Isabel Papadimitriou</title>
+  <title>Homepage</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+	<link rel="stylesheet" href="icon/css/academicons.min.css"/>
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
 </head>
 <body>
@@ -22,9 +23,10 @@
     <nav class="navbar navbar-inverse style="margin-left: 100px;"">
       <div class="container">
 		<ul class="nav navbar-nav">
-              <li><a href="#">Home</a></li>
-              <li><a href="#talks">Talks and News</a></li> 
-              <li><a href="#papers">Papers</a></li> 
+              <li><a href="#">About</a></li>
+	      <li><a href="#"PEE>Professional and Educational Experience</a></li> 
+              <li><a href="#Publications">Publications</a></li> 
+	      <li><a href="#Projects">Projects</a></li> 	
               <li><a href="#teaching">Teaching</a></li> 
 		</ul>
 	  </div>
@@ -33,97 +35,72 @@
     <div class="container">
         <div class="row">
             <!-- Contact Info on the Sidebar -->
-            <div class="col-md-3 col-xs-12">
-                <div style="word-wrap: break-word; font-family: 'Oswald', sans-serif; font-size: 32px;"><b>Isabel Papadimitriou</b></div><br>
-                <div> <p>(she)<br> </div>
-                <div class="row"> <div class="col-md-10 col-xs-4"> <img class="img-responsive" src="pictures/fikos.jpg" alt=""></div></div><br>
-                <div> <p>Email: isabelvp at stanford<br> </div>
-                <div> <p> <a href="https://scholar.google.com/citations?user=eA8GuO4AAAAJ&hl=en">my google scholar page</a><br> </div>
-                <div> <p> <a href="https://github.com/toizzy">toizzy on github</a><br> </div>
-                <div> <p> <a href="https://twitter.com/isabelpapad">isabelpapad on twitter</a><br> </div>
-            </div>
+            <div class="col-md-8 col-xs-12">
+                <div style="word-wrap: break-word; font-family: 'Oswald', sans-serif; font-size: 32px;"><b>Wei Su(苏伟) </b></div><br>
+                <div> <p>(He, His, Him)<br> </div>
+                <div class="row"> <div class="col-md-10 col-xs-6"> <img class="img-responsive" src="pictures/photo.jpg" alt=""></div></div><br>
+		<i class="ai ai-google-scholar ai-x"> <a href="https://scholar.google.com/citations?user=frrg4S0AAAAJ&hl=en">Scholar</a><br></i> 
+		<i class="ai ai-ads ai-x"> <a href="mailto:suw@mail.ahpu.edu.cn">Email</a><br></i> 
+		<i class="ai ai-orcid ai-x"> <a href="https://orcid.org/0000-0003-1610-8422">ORCID</a><br></i> 
+		<i class="ai ai-clarivate ai-x"> <a href="https://github.com/weiatahpu?tab=repositories">Github</a><br></i> 
+		
+		
+	 </div>
             <!-- Entries Column -->
             <div class="col-md-8 col-xs-12">
                 <div class="col" style="margin-top:3%; text-align:justify;">                
-					<p>Hello!</p>
-                    <p>
-                    I'm a sixth-year (on the job market!) PhD student at Stanford in the Natural Language Processing group, advised by Dan Jurafsky. </p>
-                   <p> 
-                   I work on understanding and defining the capabilities of large language models in relation to the human language system. My research focuses on creating empirical testing grounds for understanding how language models 1) <b>learn</b> and 2) <b>use</b> abstract structure and generalizations.  
-                   </p>
-                   <p>
-                   I am especially interested in pursuing an interdisciplinary research program, combining computational empirical machine learning methods with theories of structure and meaning in human language. My principal interests include:  how language models learn and use <b>generalizable grammatical abstractions</b>, the <b>interaction between structure and meaning</b> representations in high-dimensional vector spaces, and using <b>multilingual settings</b> to test the limits of abstraction in language models.
-                   </p>
+			<p><b>你好，欢迎访问我的主页！</b></p>
+			<p><b>Hello! Welcome to my homepage!</b></p>
+		<p> 2024.05 Wukong has been installed. Enjoy the Chemistry! </p>
+                <div class="row"> <div class="col-md-10 col-xs-6"> <img class="img-responsive" src="pictures/Wukong.jpg" alt=""></div></div><br>
+			
+                    <p> 2024.04 Wei has arrived at home! Well-prepared and EXCITED to start his independent research on rare-earth chemistry. Please feel free to contact him if interested! </p>
 
-                    <p>I am funded by an <a href=https://www.nsfgrfp.org/>NSF GRFP fellowship</a>, and a <a href=https://vpge.stanford.edu/fellowships-funding/sgf/details>Stanford Graduate Fellowship. </a></p>
-                    <p> I did my undergraduate at Berkeley, where I got BAs in Computer Science and in History. My history thesis was based on research at the archives of the <a href="https://en.wikipedia.org/wiki/League_for_Democracy_in_Greece"> League For Democracy in Greece</a>, a London-based solidarity organisation supporting the left in the Greek Civil War. It received the <a href="https://ies.berkeley.edu/cbs/underhill-prize">Kirk Underhill Prize</a>.
+                  
                 </div> 
                 <div class="row">
   <div class="column"></div>
   <div class="column"></div>
 </div> 
             <div class="col">    
-                <h2 id="talks" style="margin-top: 10px;">Talks and News</h2>
-            <div class="col" ,="" style="max-height: 200px;overflow: scroll;border-color: black;border-style: solid;border-width: 1px;border-left: 0;border-right: 0;padding: 1em;/*! padding-top: 0; */">    
-<p>Georgia Tech Modern Languages Colloquium, Nov 2023 <a href="pdfs/slides_gatech_modlang.pdf">[slides]</a></p>
-<p>I was selected for the 2023 Rising Stars in EECS</p>
-<p>Stanford CS 224N, <a href="https://www.youtube.com/watch?v=NvIWF82Fw4E">"Insights between NLP and Linguistics"</a> <a href="pdfs/cs224n-slides.pdf">[slides]</a></p>
-<p>Brown Computer Science, Carnegie Mellon LTI, July 2023 </p>
-<p><a href="https://simons.berkeley.edu/workshops/decoding-communication-nonhuman-species-ii">Decoding Communication in Nonhuman Species Workshop</a>, June 2023 <a href="pdfs/ceti_slides.pdf">[slides]</a> <a href="https://simons.berkeley.edu/talks/isabel-papadimitriou-stanford-university-2023-06-12">[recording]</a>
-<p>NYU CAP Lab, Apr 2023 </p>
-<p>Cornell University C.Psyd Group, Dec 2022</p>
-<p><a href="https://sigtyp.github.io/"> SIGTYP 2022 </a> keynote, July 2022 <a href="pdfs/sigtyp2022kn_slides.pdf">[slides]</a> <a href="https://www.youtube.com/watch?v=i6lTdiE3opg">[recording]</a></p>
-<p>UT Austin Computational Linguistics Group, April 2022</p>
-<p>UC Santa Barbara Computational Linguistics Group, October 2020</p>
-
-            </div>
-            </div>
-            <div class="col">    
-                <h2 id="papers">Papers</h2>
-                <p>
-                <b> <a href="https://arxiv.org/abs/2401.06416">Mission: Impossible Language Models</a></b> - Julie Kalini, <b> Isabel Papadimitriou </b>, Richard Futrell, Kyle Mahowald, and Christopher Potts (preprint)
-                </p>
-                <p></p>
-                <p>
-                <b> <a href="https://aclanthology.org/2023.findings-emnlp.563/">Injecting structural hints: Using language models to study inductive biases in language learning</a></b> - <b> Isabel Papadimitriou </b> and Dan Jurafsky, Findings of EMNLP 2023
-                </p>
-                <p></p>
-                <p>
-                <b> <a href="https://arxiv.org/abs/2210.05619">Multilingual BERT has an accent: Evaluating English influences on fluency in multilingual models </a></b> - <b> Isabel Papadimitriou* </b>, Kezia Lopez*, and Dan Jurafsky, Findings of EACL 2023, <a href="https://sigtyp.github.io/ws2023-sigtyp.html">SIGTYP 2023</a> [<a href=pdfs/Papadimitriou_SIGTYP_2023_EACL.pdf>slides</a>]
-                </p>
-                <p></p>
-                <p>
-                <b> <a href="https://arxiv.org/abs/2202.12312">Oolong: Investigating What Makes Crosslingual Transfer Hard with Controlled Studies</a></b> - Zhengxuan Wu*, <b>Isabel Papadimitriou*</b>, Alex Tamkin*, EMNLP 2023 <a href="https://arxiv.org/pdf/2202.12312.pdf">[pdf]</a>
-                </p>
-                <p></p>
-                <p>
-                 <b> <a href="pdfs/eho_lsa_poster.pdf">The Greek possessive modal eho as a special agentive modality</a> </b> - <b>Isabel Papadimitriou</b> and Cleo Condoravdi, LSA 2023 (<a href="pdfs/LSA2023-eho-poster.pdf">poster</a>) <a href="pdfs/eho_lsa_abstract.pdf">[abstract]</a>
-                </p>
-                <p></p>
-                <p> <b>
-                <a href="https://arxiv.org/abs/2203.06204">
-                When classifying grammatical role, BERT doesn't care about word order... except when it matters</a> </b> - <b>Isabel Papadimitriou </b>, Richard Futrell, and Kyle Mahowald, ACL 2022 (oral presentation) <a href="https://arxiv.org/pdf/2203.06204.pdf">[pdf]</a> <a href="https://github.com/toizzy/except-when-it-matters">[code]</a></p>
-                <p></p>
-                <p>
-                <b><a href="https://arxiv.org/pdf/2108.07258.pdf#page=22">Language</b>, Section 2.1</a> - <b>Isabel Papadimitriou</b> and Christopher D. Manning
-                </p>
-                <p style="margin-left: 25px"> In <b> On the Opportunities and Risks of Foundation Models</b> (<a href="https://arxiv.org/abs/2108.07258">full list of co-authors</a>)</p>
-                <p></p>
-                <p> <b>
-                <a href="https://arxiv.org/abs/2101.11043">
-                Deep Subjecthood: Higher-Order Grammatical Features in Multilingual BERT</a> </b> -  <b>Isabel Papadimitriou </b>, Ethan A. Chi, Richard Futrell, and Kyle Mahowald, EACL 2021 (oral presentation) <a href="https://arxiv.org/pdf/2101.11043.pdf">[pdf]</a> <a href="https://github.com/toizzy/deep-subjecthood">[code]</a></p>
-                <p> <b>
-                <p></p>
-                <a href="https://arxiv.org/abs/2004.14601">
-                Learning Music Helps You Read: Using transfer to study linguistic structure in language models </a> </b> - <b>Isabel Papadimitriou </b> and Dan Jurafsky, EMNLP 2020 (oral presentation) <a href="https://arxiv.org/abs/2004.14601">[pdf]</a> <a href="https://github.com/toizzy/tilt-transfer">[code]</a></p>
+                <h2 id="PEE">Professional and Educational Experience</h2>
+<p>School of Chemical and Environmental Engineering, Anhui Polytechnic University, Lecture, 08/22 to Present </p>
+<p>Michigan State University, with Prof. <b><a href="https://selvandemir.com/index.php/selvan-demir/">Selvan Demir</a></b>, Postdoc, 04/23 to 03/24 </p>
+<p>Southern University of Science and Technology, with Prof. <b><a href="https://www.chemie.uni-wuerzburg.de/inorgchem/forschungsgruppen/prof-dr-qing-ye/prof-qing-ye/">Qing Ye</a></b>, Research Assistant Professor, 03/20 to 06/22 </p>
+<p>Nanjing University, with Prof.  <b><a href="https://hysz.nju.edu.cn/zcq/main.psp">Congqing Zhu</a></b>, Postdoc, 02/18 to 01/22</p>
+<p>Wuhan University of Technology, with Prof. Francis Verpoort, Ph.D., 09/12 to 12/17</p>
+<p>Wuhan University of Technology, Bachelor, 09/08 to 07/12</p>
 
             </div>
             <div class="col">    
+                <h2 id="Publications">Publications</h2>
+		<p><strong>W. Su</strong>, <em>etc.</em>, Facile Synthesis of Uranium Complexes with a Pendant Borane Lewis Acid and 1,2-Insertion of CO into a U-N Bond, <em>Angew. Chem. Int. Ed.</em> <strong>2022</strong>, <em>61</em>, e202212823(1-6). <i class="ai ai-open-access ai-x"></i> <a href="https://onlinelibrary.wiley.com/doi/epdf/10.1002/anie.202212823"><i class="ai ai-doi ai-x"></i></a> </p> 
+		<p><strong>W. Su</strong>, <em>etc.</em>, Isolation of a Uranium(III)–Carbon Multiple Bond Complex, <em>Chem.–Eur. J.</em> <strong>2021</strong>, <em>39</em>, 10006. <i class="ai ai-open-access ai-x"></i> <a href="https://chemistry-europe.onlinelibrary.wiley.com/doi/10.1002/chem.202100699"><i class="ai ai-doi ai-x"></i></a> </p>
+		<p>W. Fang, S, Pan, <strong>W. Su</strong>, <em>etc.</em>, Complex Featuring Two Double Dative Bonds Between Carbon(0) and Uranium, <em>CCS Chem.</em> <strong>2021</strong>, <em>3</em>, 2324. <i class="ai ai-open-access ai-x"></i> <a href="https://www.chinesechemsoc.org/doi/10.31635/ccschem.021.202101124"> <i class="ai ai-doi ai-x"></i></a> </p>
+		<p>L. Xiang, J. Wang, <strong>W. Su</strong>,<em>etc.</em>, Facile Access to Halogenated Cationic B=C-centered Organoboron Isoelectronic with Alkenyl Halides, <em>Dalton Trans.</em> <strong>2021</strong>, <em>50</em>, 17491. <a href="https://pubs.rsc.org/en/content/articlelanding/2021/dt/d1dt03325e"> <i class="ai ai-doi ai-x"></i></a> </p>
+		<p>C. Zhang, J. Wang, <strong>W. Su</strong>, <em>etc.</em>, Synthesis, Characterization, and Density Functional Theory Studies of Three-Dimensional Inorganic Analogues of 9,10-Diboraanthracene—A New Class of Lewis Superacids, <em>J. Am. Chem. Soc.</em> <strong>2021</strong>, <em>143</em>, 8552. <a href="https://pubs.acs.org/doi/10.1021/jacs.1c03057"> <i class="ai ai-doi ai-x"></i></a></p>
+		<p><strong>W. Su</strong>, <em>etc.</em>, Cerium-carbon dative interactions supported by carbodiphosphorane, <em>Dalton Trans.</em> <strong>2019</strong>, <em>48</em>, 16108. <a href="https://pubs.rsc.org/en/content/articlelanding/2019/dt/c9dt03770e"> <i class="ai ai-doi ai-x"></i></a> </p>
+                <p><strong>W. Su</strong>, <em>etc.</em>, Double dative bond between divalent carbon(0) and uranium, <em>Nat. Commun.</em> <strong>2018</strong>, <em>9</em>: 4997. <i class="ai ai-open-access ai-x"></i> <a href="https://www.nature.com/articles/s41467-018-07377-6"><i class="ai ai-doi ai-x"></i></a> </p>
+		<p>F. Cai<sup>#</sup>, <strong>W. Su</strong><sup>#</sup>, <em>etc.</em>, Synthesis and characterization of [Ru(NC<sup>NHC</sup>O)(bpy)L]<sup>+</sup> complexes and their reactivity towards water oxidation, <em>New J. Chem.</em>, <strong>2018</strong>, <em>42</em>, 2476. <a href="https://pubs.rsc.org/en/content/articlelanding/2018/nj/c7nj03198j/unauth"><i class="ai ai-doi ai-x"></i></a> </p>
+	       <p><strong>W. Su</strong>, <em>etc.</em>, Chemical and photochemical water oxidation catalyzed by novel ruthenium complexes comprising a negatively charged NC<sup>NHC</sup>O ligand, <em>Catal. Sci. Tech.</em> <strong>2017</strong>, <em>7</em>, 387. <a href="https://pubs.rsc.org/en/content/articlelanding/2017/cy/c6cy02333a/unauth"><i class="ai ai-doi ai-x"></i></a></p>
+		<p><strong>W. Su</strong>, <em>etc.</em>, Water oxidation by <em>in-situ</em> generated [Ru<sup>II</sup>(OH<sub>2</sub>)(NC<sup>NHC</sup>O)(pic)<sub>2</sub>]<sup>+</sup>, <em>Chem. Asian J.</em> <strong>2017</strong>, <em>12</em>, 2304. <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/asia.201700837"><i class="ai ai-doi ai-x"></i></a> </p>
+		<p><strong>W. Su</strong>, <em>etc.</em>, Chemical and Photochemical Water Oxidation by [RuCl(NC<sup>NHC</sup>O)(DMSO)(py)]-Type Complexes, <em>ChemCatChem</em> <strong>2017</strong>, <em>9</em>, 2565. <a href="https://chemistry-europe.onlinelibrary.wiley.com/doi/abs/10.1002/cctc.201700049"><i class="ai ai-doi ai-x"></i></a> </p>
+		
+		
+
+
+            </div>
+            <div class="col">    
+                <h2 id="Projects">Projects</h2>
+                    <p> <b>Rare-earth carbon multiple bond complexes</b>, Anhui Polytechnic University (Start-up funding), 2022-2024, $100K  </p>
+                    <p> <b>Rare-earth complexes bearing a pendant borane moiety</b>, National Science Foundation of China, 2024-2026, $300K </p>
+		
+            </div>
+		     <div class="col">    
                 <h2 id="teaching">Teaching</h2>
-                    <p> I am TAing CS324H, <b>History of Natural Language Processing</b>, taught by Dan Jurafsky and Chris Manning in Winter 2024 </p>
-                    <p> I was a TA for CS224N, <b>Natural Language Processing with Deep Learning</b>, taught by Chris Manning in Winter 2023 </p>
-                    <p>I was a TA for the <b>Independent Study in Machine Translation</b> seminar taught by Noah Goodman in Winter 2020 </p>
-					<p>At Berkeley I TAed <b>CS70 Discrete Math and Probability</b> Fall 2015, taught by Satish Rao and Jean Walrand </p>
+                    <p>  </p>
+                    <p> </p>
+					<p> </p>
             </div>
         </div>
                 </div>
