--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 			<p><b>你好，欢迎访问我的主页！</b></p>
 			<p><b>Hello! Welcome to my homepage!</b></p>
 		<p><b> MORE TO BE UPDATED!</b></p>
+			<p> 2024.05.08 Wei gave a talk entitled "Uranium-Carbon Multiple Bond Complexes" at home institute! </p>
+			<div class="row"> <div class="col-md-10 col-xs-6"> <img class="img-responsive" src="pictures/talk240508.jpg" alt=""></div></div><br>
 			<p> 2024.05 Wukong has been installed. Enjoy the Chemistry! </p>
                 <div class="row"> <div class="col-md-10 col-xs-6"> <img class="img-responsive" src="pictures/Wukong.jpg" alt=""></div></div><br>
                     <p> 2024.04 Wei has arrived at home! Well-prepared and EXCITED to start his independent research on rare-earth chemistry. Please feel free to contact him if interested! </p>
